--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URL=mongodb+srv://aaronfebrian32:wIlaYqibpD37gSOV@digital-news-data.5d6iphs.mongodb.net/digital-news
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dbec4h0aa
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET_NAME=digital_news_data
