--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 MONGO_URL=mongodb+srv://aaronfebrian32:wIlaYqibpD37gSOV@digital-news-data.5d6iphs.mongodb.net/digital-news
+# MONGODB_URL=mongodb+srv://aaronfebrian32:wIlaYqibpD37gSOV@digital-news-data.5d6iphs.mongodb.net/users
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dbec4h0aa
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET_NAME=digital_news_data
+
+NEXTAUTH_SECRET=iwafagfoggfooqwfgowhfhpwffsqfq
+NEXTAUTH_URL=http://localhost:3000
