--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.1"
   },
