--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
